second birthdat to Ni

--- a/index.html
+++ b/index.html
@@ -1,20 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ryan Smith</title>
+    <title>NI TRUONG</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <link rel="stylesheet" href="dist/css/lightbox.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-<script src="dist/js/lightbox-plus-jquery.min.js"></script>
-<script src="script.js"></script>
+<body>
+    <header>
+        <a href="index.html">
+            <div class="signature">
+                <h5 class="signature-heading">Anny Boo</h5>
+                <h3 class="signature-subhead">Welcome</h3>
+            </div>
+        </a>
+    </header>
+
+    <section class="about py-5 no-padding">
+        <div class="container">
+            <div class="about-content">
+                <div class="about-description">
+                    <div class="signature">
+                        <h5 class="signature-heading">To Anny Boo</h5>
+                        <p class="m-0">Hi Ni, it's your Bin Bin again. I really took time to think and prepare birthday
+                            presents for you. I really did not get Ni sometimes and so I had spent a lot of time
+                            thinking of making a special gift for you. I was really stuck, but then I thought why not
+                            make a special card for my babe. Maybe it's not beautiful or a lot of money but I hope you
+                            will like it. You are always and my sunshine. Love Ni a lot.</p>
+                    </div>
+                </div>
+                <div class="about-image">
+                    <img src="images/photographer.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="gallery py-5 no-padding">
+        <div class="container">
+            <div class="section-heading text-center">
+                <h1 class="heading-title">My Beloved Ni</h1>
+            </div>
+
+            <div class="row no-gutters">
+                <div class="lightbox-content col-12 col-sm-6 col-md-4">
+                    <a href="images/img-6.jpg" data-lightbox="photograph">
+                        <img src="images/img-6.jpg" class="img-fluid" alt="">
+                    </a>
+                </div>
+                <div class="lightbox-content col-12 col-sm-6 col-md-4">
+                    <a href="images/img-2.jpg" data-lightbox="photograph">
+                        <img src="images/img-2.jpg" class="img-fluid" alt="">
+                    </a>
+                </div>
+                <div class="lightbox-content col-12 col-md-4">
+                    <a href="images/img-9.jpg" data-lightbox="photograph">
+                        <img src="images/img-9.jpg" class="img-fluid" alt="">
+                    </a>
+                </div>
+                <div class="lightbox-content col-12 col-sm-6 col-md-4">
+                    <a href="images/img-4.jpg" data-lightbox="photograph">
+                        <img src="images/img-4.jpg" class="img-fluid" alt="">
+                    </a>
+                </div>
+                <div class="lightbox-content col-12 col-sm-6 col-md-4">
+                    <a href="images/img-3.jpg" data-lightbox="photograph">
+                        <img src="images/img-3.jpg" class="img-fluid" alt="">
+                    </a>
+                </div>
+                <div class="lightbox-content col-12 col-sm-6 col-md-4">
+                    <a href="images/img-1.jpg" data-lightbox="photograph">
+                        <img src="images/img-1.jpg" class="img-fluid" alt="">
+                    </a>
+                </div>
+                <div class="lightbox-content col-12 col-sm-6 col-md-4">
+                    <a href="images/img-7.jpg" data-lightbox="photograph">
+                        <img src="images/img-7.jpg" class="img-fluid" alt="">
+                    </a>
+                </div>
+                <div class="lightbox-content col-12 col-sm-6 col-md-4">
+                    <a href="images/img-8.jpg" data-lightbox="photograph">
+                        <img src="images/img-8.jpg" class="img-fluid" alt="">
+                    </a>
+                </div>
+                <div class="lightbox-content col-12 col-sm-6 col-md-4">
+                    <a href="images/img-5.jpg" data-lightbox="photograph">
+                        <img src="images/img-5.jpg" class="img-fluid" alt="">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="testimonials py-5 no-padding">
+        <div class="container">
+            <div class="section-heading text-center">
+                <h1 class="heading-title">Some information about baby Ni</h1>
+            </div>
+
+            <div class="row">
+                <div class="col-md-8 m-auto">
+                    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                            <li data-target="#myCarousel" data-slide-to="1"></li>
+                            <li data-target="#myCarousel" data-slide-to="2"></li>
+                        </ol>
+
+                        <div class="carousel-inner">
+                            <div class="item carousel-item active">
+                                <div class="img-box">
+                                    <img src="images/1-1.jpg" alt="">
+                                </div>
+                                <p class="testimonial">This is baby Ni at her birthday and wow ... full of cake on Ni
+                                    face already.</p>
+                            </div>
+                            <div class="item carousel-item">
+                                <div class="img-box">
+                                    <img src="images/1-2.jpg" alt="">
+                                </div>
+                                <p class="testimonial">Baby Ni is given flowers with a lovely smile.</p>
+                            </div>
+                            <div class="item carousel-item">
+                                <div class="img-box">
+                                    <img src="images/1-3.jpg" alt="">
+                                </div>
+                                <p class="testimonial">
+                                    Baby Ni is not sure what was happening ... uhh what was it ???</p>
+                            </div>
+                        </div>
+                        <a href="#myCarousel" class="carousel-control left carousel-control-prev" data-slide-to="prev">
+                            <p class="fa fa-angle-left"></p>
+                        </a>
+                        <a href="#myCarousel" class="carousel-control left carousel-control-next" data-slide-to="prev">
+                            <p class="fa fa-angle-right"></p>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-md-5 col-lg-4 mb-5 mb-md-0">
+                    <a href="index.html">
+                        <div class="signature sign">
+                            <h5 class="signature-heading">A.Bin</h5>
+                        </div>
+                    </a>
+                </div>
+            </div>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="dist/js/lightbox-plus-jquery.min.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
