--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <a href="index.html">
             <div class="signature">
-                <h5 class="signature-heading">Anny Boo</h5>
+                <h5 class="signature-heading">Anny Truong</h5>
                 <h3 class="signature-subhead">Welcome</h3>
             </div>
         </a>
@@ -27,7 +27,7 @@
             <div class="about-content">
                 <div class="about-description">
                     <div class="signature">
-                        <h5 class="signature-heading">To Anny Boo</h5>
+                        <h5 class="signature-heading">To Anny Truong</h5>
                         <p class="m-0">Hi Ni, it's your Bin Bin again. I really took time to think and prepare birthday
                             presents for you. I really did not get Ni sometimes and so I had spent a lot of time
                             thinking of making a special gift for you. I was really stuck, but then I thought why not
